--- a/indexing/experimentation/code_embeddings.ipynb
+++ b/indexing/experimentation/code_embeddings.ipynb
@@ -2,54 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fbb75fdf",
+   "execution_count": 7,
+   "id": "1a5f8b97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn.functional as F\n",
-    "from transformers import AutoTokenizer, AutoModel"
+    "from transformers import AutoModel\n",
+    "from numpy.linalg import norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c016a35f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = AutoModel.from_pretrained('jinaai/jina-embeddings-v2-base-code', trust_remote_code=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f526de",
+   "id": "77582597",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 0: 1.0\n",
+      "0, 1: 0.7281750440597534\n",
+      "0, 2: 0.1965203881263733\n",
+      "0, 3: 0.7215346097946167\n",
+      "0, 4: 0.41217344999313354\n"
+     ]
+    }
+   ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"nomic-ai/nomic-embed-code\")\n",
-    "model = AutoModel.from_pretrained(\"nomic-ai/nomic-embed-code\")"
+    "cos_sim = lambda a,b: (a @ b.T) / (norm(a)*norm(b))\n",
+    "\n",
+    "embeddings = model.encode(\n",
+    "    [\n",
+    "        'How do I access the index while iterating over a sequence with a for loop?',\n",
+    "        '# Use the built-in enumerator\\nfor idx, x in enumerate(xs):\\n    print(idx, x)',\n",
+    "        'def fact(n):\\n if n < 0:\\n  raise ValueError\\n return 1 if n == 0 else n * fact(n - 1)',\n",
+    "        'for idx, x in enumerate(xs):\\n    print(idx, x)',\n",
+    "        'for item in list:\\nprint(item)'\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "for i, embedding in enumerate(embeddings):\n",
+    "    if i == 0:\n",
+    "        continue\n",
+    "    print(f\"0, {i}: {cos_sim(embeddings[0], embedding)}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43b4cd67",
+   "id": "90e31a94",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def last_token_pooling(hidden_states, attention_mask):\n",
-    "    sequence_lengths = attention_mask.sum(-1) - 1\n",
-    "    return hidden_states[torch.arange(hidden_states.shape[0]), sequence_lengths]\n",
-    "\n",
-    "queries = ['Represent this query for searching relevant code: Calculate the n-th factorial']\n",
-    "codes = ['def fact(n):\\n if n < 0:\\n  raise ValueError\\n return 1 if n == 0 else n * fact(n - 1)']\n",
-    "code_snippets = queries + codes\n",
-    "\n",
-    "encoded_input = tokenizer(code_snippets, padding=True, truncation=True, return_tensors='pt')\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    model_output = model(**encoded_input)[0]\n",
-    "\n",
-    "embeddings = last_token_pooling(model_output, encoded_input['attention_mask'])\n",
-    "embeddings = F.normalize(embeddings, p=2, dim=1)\n",
-    "print(embeddings.shape)\n",
-    "\n",
-    "similarity = F.cosine_similarity(embeddings[0], embeddings[1], dim=0)\n",
-    "print(similarity)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
