comment to ipynb

--- a/apps/indexing/experimentation/code_embeddings.ipynb
+++ b/apps/indexing/experimentation/code_embeddings.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "77582597",
    "metadata": {},
    "outputs": [
@@ -50,6 +50,8 @@
     "        'for item in list:\\nprint(item)'\n",
     "    ]\n",
     ")\n",
+    "\n",
+    "# able to differentiate between iterating with index vs general iteration (good!!)\n",
     "\n",
     "for i, embedding in enumerate(embeddings):\n",
     "    if i == 0:\n",
